apps/adhd-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: adhd
  labels:
    name: adhd
    app: mywebadhd
